--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.5.0",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-lazyload": "^3.2.1",
     "react-router-dom": "^7.6.3",
     "sonner": "^2.0.6"
   },
